namespace Platformer.Managers
{
	public static class Statics
	{
		#region Input
		public const string Horizontal = "Horizontal";
		public const string Vertical = "Vertical";
		public const string Jump = "Jump";
		#endregion

		#region Tags
		public const string Coin = "Coin";
		#endregion
	}
}

