using System;

namespace TPS.Managers
{
	public static class Statics 
	{
		#region Animator Parameters
		public const string Vertical = "Vertical";
		public const string Horizontal = "Horizontal";
		public const string Aiming = "Aiming";
		public const string Sprint = "Sprint";
		public const string Weapon = "Weapon";
		public const string Speed = "Speed";
		public const string Moving = "Moving";
		#endregion Animator Parameters

		#region Input
		public const int Mouse_leftClick = 0;
		public const int Mouse_rightClick = 1;
		public const int Mouse_middleClick = 2;

		public const string Mouse_xInput = "Mouse X";
		public const string Mouse_yInput = "Mouse Y";

		public const string Shift = "Fire3";
		#endregion

		#region Tags
		public const string TargetLook = "TargetLook";
		#endregion
	}
}
